--- a/src/app/client/src/styles/components/header.scss
+++ b/src/app/client/src/styles/components/header.scss
@@ -1,41 +1,70 @@
-.ui.primary-header .logo img{
-    height: 56px;
-    max-height:56px;
-}                         
-.ui.text.primary-nav.menu .item {
-    font-size: 14px;
-    color: #666666;  
-}
-.ui.text.primary-nav.menu .item:hover {
-    color: $primary-color;  
-    background: #fff;
-}
-.ui.text.primary-nav.menu .item.border-right {
-    border-right: 0.5px solid;
-    border-color: $header-seperator;
-    padding-right: 13px;
+.guestUser {
+  padding-top: 178px !important;
+  
+  @media screen and (min-width: 1100px) {
+    padding-top: 107px !important;
+  }
 }
 
-.ui.text.primary-nav.menu .item.active{
-    color: $link-color;
-    font-weight: bold;
+.loggedInUser {
+  padding-top: 178px !important;
+  
+  @media screen and (min-width: 1100px) {
+    padding-top: 122px !important;
+  }
+  .landing-page-section {
+    margin-top: 0;
+  }
+}
+
+.guestUser ~ app-landing-page .landing-page-section {
+  margin-top: -110px;
+
+  @media screen and (min-width: 992px) {
+    margin-top: -50px;
+  }
+}
+
+.loggedInUser ~ app-landing-page .landing-page-section {
+  margin-top: 0;
+}
+
+
+.primary-header {
+  justify-content: space-between;
+  align-items: center !important;
+
+  @media screen and (max-width: 768px) {
+    padding: 5px;
+  }
+  
+  .logo img {
+    height: 56px;
+    max-height:56px;
+  }
+}    
+                   
+.ui.text.primary-nav.menu {
+  .item {
+    font-size: 14px;
+    color: #666666;
+
+    &:hover {
+      color: $link-color;  
+      background: #fff;
+    }
+    &.active{
+      color: $link-color;
+      font-weight: bold;
+    }
+  }
 }
 
 .ui.visible.right.sidebar ~ .fixed,
 .ui.visible.right.sidebar ~ .pusher{
-    transform: translate3d(0, 0, 0) !important;
+  transform: translate3d(0, 0, 0) !important;
 }
 .ui.visible.uncover.sidebar{
-    z-index: 4;
-}
-.mc-nonuser,
-.mc-user {
-  padding-top: 160px !important;
-}
-
-@media screen and (min-width: 1100px) {
-  .mc-nonuser,
-  .mc-user {
-    padding-top: 107px !important;
-  }
+  z-index: 4;
+  border: 0;
 }
